Fixed Base64Helper - wrote new method to turn byteStream back to JSON, Added Book constructor to update imageData in object to send as JSON in GET Requests