@@ -1,6 +1,6 @@
 package com.rmit.sept.bookmicroservice.helper;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 public class Base64Helper {
     
@@ -11,6 +11,14 @@ public class Base64Helper {
     
     public static byte[] base64ToByteStream(String data) {
         String[] dataSplit = data.split(",");
-        return DatatypeConverter.parseBase64Binary(dataSplit[1]);
+        byte[] byteStream = Base64.getDecoder().decode(dataSplit[1]);
+        System.out.println(byteStream);
+        return byteStream;
+    }
+    
+    public static String byteStreamToJson(String dataType, byte[] data) {
+        String Json = dataType + "," + new String(Base64.getEncoder().encode(data));
+        System.out.println(Json);
+        return Json;
     }
 }
